--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -11,6 +11,4 @@ jobs:
     steps:
       - name: Close issue
         run: |
-          gh pr close ${{ env.PR-NUMBER }}
-        env:
-          PR-NUMBER: ${{ github.event.issue.number }}
+          gh pr close ${{ github.event.issue.number }}
