--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -13,4 +13,4 @@ jobs:
         run: |
           gh pr close ${{ github.event.issue.number }}
         env:
-          github-token: "${{ secrets.GITHUB_TOKEN }}"
+          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
