--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -11,7 +11,6 @@ jobs:
     steps:
       - name: Close issue
         run: |
-          echo ${{ fromJson(github.event.issue) }}
-          gh pr close ${{ github.event.issue.number }} -R  ${{ github.event.issue.repo }}
+          gh issue close ${{ github.event.issue.number }}
         env:
           GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
