--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -14,3 +14,4 @@ jobs:
           gh issue close ${{ github.event.issue.number }}
         env:
           GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        working-directory: ${{ github.workspace }}
