--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -11,7 +11,8 @@ jobs:
     steps:
       - name: Close issue
         run: |
-          gh issue close https://github.com/tapsterbv/issue-tracker/issues/${{ github.event.issue.number }}
+          echo ${{ github.workspace }}
+          gh issue close https://github.com/${{ env.REPO }}/issues/${{ github.event.issue.number }}
         env:
+          REPO: "tapsterbv/issue-tracker"
           GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-        working-directory: ${{ github.workspace }}
