--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Close issue
         run: |
           echo ${{ github.workspace }}
-          gh issue close https://github.com/${{ env.REPO }}/issues/${{ github.event.issue.number }}
+          echo ${{ github.issue.repo }}
+          echo ${{ github.issue.owner }}
         env:
           REPO: "tapsterbv/issue-tracker"
           GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
