--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -11,7 +11,6 @@ jobs:
     steps:
       - name: Close issue
         run: |
-          gh issue close https://github.com/${{ env.REPO }}/issues/${{ github.event.issue.number }}
+          gh issue close https://github.com/${{ github.repository }}/issues/${{ github.event.issue.number }}
         env:
-          REPO: ${{ github.repository_owner }}/${{ github.repository }}
           GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
