--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -2,15 +2,23 @@ name: Close declined issue
 on:
   issues:
     types:
-      - opened
       - labeled
 jobs:
   close-declined-issue:
     if: github.event.label.name == 'declined'
     runs-on: ubuntu-latest
     steps:
-      - name: Close issue
-        run: |
-          gh issue close https://github.com/${{ github.repository }}/issues/${{ github.event.issue.number }}
+      - name: Update Issue Status
         env:
-          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          # Extract the necessary information from the GitHub event
+          ISSUE_NUMBER=$(echo $GITHUB_EVENT_PATH | jq -r '.issue.number')
+          NEW_STATUS="Todo"  # Change this to your desired status
+
+          # Make a PATCH request to update the issue
+          curl -X PATCH \
+            -H "Authorization: token $GITHUB_TOKEN" \
+            -H "Accept: application/vnd.github.v3+json" \
+            https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${ISSUE_NUMBER} \
+            -d '{"state": "open", "labels": ["'"${NEW_STATUS}"'"]}'
