--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -9,16 +9,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Update Issue Status
+        uses: octokit/graphql-action@v2.x
+        with:
+          graphql: |
+            mutation ChangeLane($projectNumber: Int!, $issueId: ID!, $projectColumnName: String!, $projectCardNote: String!) {
+              moveProjectCard(input: {projectCardId: $issueId, columnId: $projectColumnName, note: $projectCardNote}) {
+                cardEdge {
+                  node {
+                    id
+                  }
+                }
+              }
+            }
+          projectNumber: 4
+          issueId: ${{ github.event.issue.node_id }}
+          projectColumnName: "Todo"
+          projectCardNote: "Issue moved to Todo lane"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          # Extract the necessary information from the GitHub event
-          ISSUE_NUMBER=$(echo $GITHUB_EVENT_PATH | jq -r '.issue.number')
-          NEW_STATUS="Todo"  # Change this to your desired status
-
-          # Make a PATCH request to update the issue
-          curl -X PATCH \
-            -H "Authorization: token $GITHUB_TOKEN" \
-            -H "Accept: application/vnd.github.v3+json" \
-            "https://api.github.com/repos/${GITHUB_REPOSITORY}/issues/${ISSUE_NUMBER}" \
-            -d '{"state": "open", "labels": ["'"${NEW_STATUS}"'"]}'
