--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -12,8 +12,8 @@ jobs:
         uses: octokit/graphql-action@v2.x
         with:
           graphql: |
-            mutation ChangeLane($projectNumber: Int!, $issueId: ID!, $projectColumnName: String!, $projectCardNote: String!) {
-              moveProjectCard(input: {projectCardId: $issueId, columnId: $projectColumnName, note: $projectCardNote}) {
+            mutation ChangeLane($project-number: Int!, $issue-id: ID!, $project-column-name: String!, $project-card-note: String!) {
+              moveProjectCard(input: {projectCardId: $issue-id, columnId: $project-column-name, note: $project-card-note}) {
                 cardEdge {
                   node {
                     id
@@ -21,9 +21,9 @@ jobs:
                 }
               }
             }
-          projectNumber: 4
-          issueId: ${{ github.event.issue.node_id }}
-          projectColumnName: "Todo"
-          projectCardNote: "Issue moved to Todo lane"
+          project-number: 4
+          issue-id: ${{ github.event.issue.node_id }}
+          project-column-name: "Todo"
+          project-card-note: "Issue moved to Todo lane"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
