--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           graphql: |
             query GetIssueData {
-            	organization(login: "tapsterbv") {
+            	organization(login: ${{ github.event.organization.login }}) {
                 project(number: 4) {
                   id
                 }
