--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -8,21 +8,19 @@ jobs:
     if: github.event.label.name == 'declined'
     runs-on: ubuntu-latest
     steps:
-      - name: Fetch project information
-        uses: actions/github-script@v7
-        id: myscript
+
+      - name: Run gh get projects
+        id: gh-projects
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          result-encoding: string
-          script: |
-            github.rest.projects.get({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-            })
+        run: |
+          gh api \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secret.WORKFLOW_API_KEY_GITHUB }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            /orgs/tapsterbv/projects
       - name: Change Status
         run: |
           echo ${{ env.NEWCOLUMNID }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NEWCOLUMNID: ${{ fromJson(steps.myscript.outputs.data) }}
+          NEWCOLUMNID: ${{ fromJson(steps.gh-projects.outputs.data) }}
