--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -15,10 +15,11 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           gh api \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.WORKFLOW_API_KEY_GITHUB }}" \
+            -X POST \
+            -H "Accept: application/vnd.github.inertia-preview+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            /orgs/tapsterbv/projects
+            -F "position=Done" \
+            /projects/columns/cards/I_kwDOLkAh0M6EmwE/moves
       - name: Change Status
         run: |
           echo ${{ steps.gh-projects.outputs.data }}
