--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -13,13 +13,16 @@ jobs:
         id: gh-projects
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DONE_COLUMN_ID: 98236657
+          CARD_ID: I_kwDOLkAh0M6EmwE
         run: |
           gh api \
-            -X POST \
-            -H "Accept: application/vnd.github.inertia-preview+json" \
+            --method POST \
+            -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            -F "position=Done" \
-            /projects/columns/cards/I_kwDOLkAh0M6EmwE/moves
+            /projects/columns/cards/${{ env.CARD_ID }}/moves \
+            -F column_id=${{ env.DONE_COLUMN_ID }} \
+            -f position='top' 
       - name: Change Status
         run: |
           echo ${{ steps.gh-projects.outputs.data }}
