--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -19,6 +19,7 @@ jobs:
           gh api \
             --method POST \
             -H "Accept: application/vnd.github+json" \
+            -H "Authorization: token ${{ secrets.WORKFLOW_API_KEY_GITHUB }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             /projects/columns/cards/${{ env.CARD_ID }}/moves \
             -F column_id=${{ env.DONE_COLUMN_ID }} \
