--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -17,7 +17,7 @@ jobs:
           CARD_ID: I_kwDOLkAh0M6EmwE
         run: |
           gh api \
-            --method POST \
+            --method PATCH \
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: token ${{ secrets.WORKFLOW_API_KEY_GITHUB }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
