--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -23,24 +23,12 @@ jobs:
           CARD_ID: I_kwDOLkAh0M6EmwE
         run: |
           gh api \
-            --method DELETE \
-            -H "Accept: application/vnd.github.inertia-preview+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: token ${{ secrets.WORKFLOW_API_KEY_GITHUB }}" \
-            /projects/columns/cards/${{ env.CARD_ID }}
-      - name: Add issue to new lane
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DONE_COLUMN_ID: 98236657
-          CARD_ID: I_kwDOLkAh0M6EmwE
-        run: |
-          gh api \
             --method POST \
-            -H "Accept: application/vnd.github.inertia-preview+json" \
+            -H "Accept: application/vnd.github+json" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            -H "Authorization: token ${{ secrets.WORKFLOW_API_KEY_GITHUB }}" \
-            /projects/columns/${{ env.DONE_COLUMN_ID }}/cards \
-            -F content_id=${{ env.CARD_ID }}
+            /projects/columns/cards/I_kwDOLkAh0M6EmwE/moves \
+            -F column_id=98236657 \
+           -f position='bottom' 
       - name: Change Status
         run: |
           echo ${{ steps.gh-projects.outputs.data }}
