--- a/.github/workflows/close-declined-issue.yml
+++ b/.github/workflows/close-declined-issue.yml
@@ -8,27 +8,8 @@ jobs:
     if: github.event.label.name == 'declined'
     runs-on: ubuntu-latest
     steps:
-      - name: Get issue
+      - name: Close issue when declined
+        run: |
+          gh issue close https://github.com/${{ github.repository }}/issues/${{ github.event.issue.number }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          gh api \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /repos/tapsterbv/issue-tracker/issues/21
-      - name: Remove issue from lane
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DONE_COLUMN_ID: 98236657
-          CARD_ID: I_kwDOLkAh0M6EmwE
-        run: |
-          gh api \
-            --method POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            /projects/columns/cards/I_kwDOLkAh0M6EmwE/moves \
-            -F column_id=98236657 \
-           -f position='bottom' 
-      - name: Change Status
-        run: |
-          echo ${{ steps.gh-projects.outputs.data }}
+          GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
